relativ template urls added minified versions of angular, angular ui bootstrap and bootstrap

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ToDo's</title>
 
-    <link href="style/bootstrap.css" rel="stylesheet">
+    <link href="style/bootstrap.min.css" rel="stylesheet">
     <link href="style/todo.css" rel="stylesheet">
 </head>
 
@@ -21,8 +21,8 @@
         </div>
     </div>
 
-    <script src="script/angular.js"></script>
-    <script src="script/ui-bootstrap-tpls-0.11.0.js"></script>
+    <script src="script/angular.min.js"></script>
+    <script src="script/ui-bootstrap-tpls-0.11.0.min.js"></script>
     <script src="script/todo.js"></script>
     <script src="script/note.js"></script>
     <script src="script/dragndrop.js"></script>
