--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div ng-repeat="group in todo.groups" ng-dblclick="todo.addNote(group.id)" drop="todo.moveNote($dragData.note, $dragData.oldGroupId, group.id)" class="todo-col">
             <h1>{{group.label}}</h1>
             <div class="note-container">
-                <note ng-repeat="note in group.notes" drag="{'note': note, 'oldGroupId': group.id}" on-remove="todo.removeNote(note)" data="note"></note>
+                <note ng-repeat="note in group.notes" drag="{'note': note, 'oldGroupId': group.id}" on-remove="todo.removeNote(note)" data="note" on-edit="todo.noteEdited(note)"></note>
             </div>
         </div>
     </div>
