--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="script/dragndrop.js"></script>
     <script src="script/db.js"></script>
     <script src="script/options.js"></script>
+    <script src="script/export.js"></script>
 </body>
 
 </html>
