added track by expressions to ng-repeat

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <body ng-controller="TodoController as todo">
     <div class="todo-board">
-        <div ng-repeat="group in todo.groups" ng-dblclick="todo.addNote(group.id)" drop="todo.moveNote($dragData.note, $dragData.oldGroupId, group.id)" class="todo-col">
+        <div ng-repeat="group in todo.groups track by group.id" ng-dblclick="todo.addNote(group.id)" drop="todo.moveNote($dragData.note, $dragData.oldGroupId, group.id)" class="todo-col">
             <h1 class="disable-select">{{group.label}}</h1>
             <div class="note-container">
-                <note ng-repeat="note in group.notes" drag="{'note': note, 'oldGroupId': group.id}" on-remove="todo.removeNote(note)" data="note" on-edit="todo.noteEdited(note)"></note>
+                <note ng-repeat="note in group.notes track by note.id" drag="{'note': note, 'oldGroupId': group.id}" on-remove="todo.removeNote(note)" data="note" on-edit="todo.noteEdited(note)"></note>
             </div>
         </div>
     </div>
